rs/macros/tests/ui/sails_type_fails_on_trait.rs
use sails_rs::sails_type;

#[sails_type]
pub trait MyTrait {}

fn main() {}
